# rust-profiling-example

./: .gitignore  Cargo.toml  README.md
locust/: cpu.py  locustfile.py  read.py
src/: handler.rs  main.rs
